source-wrap fix

--- a/stylus/elements/activities.styl
+++ b/stylus/elements/activities.styl
@@ -66,6 +66,7 @@
 		padding: 0px 8px 0px 8px
 		color: #666666 !important
 		margin-top: -3px
+		margin-left: 6px
 		max-width: 190px
 		display: block
 		a
