--- a/stylus/framework/chat-themes.styl
+++ b/stylus/framework/chat-themes.styl
@@ -161,8 +161,6 @@ body.client-style-compact .client
 			.message-content
 				display: block
 				top: inherit
-			.source-wrap
-				margin-right: -3px
 				
 	.date-separator
 		margin: 0
